[gd_scene load_steps=38 format=2]

[ext_resource path="res://addons/graphics_editor/Editor.gd" type="Script" id=1]
[ext_resource path="res://addons/graphics_editor/PaintCanvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/graphics_editor/VisualGrid.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/graphics_editor/CanvasOutline.gd" type="Script" id=5]
[ext_resource path="res://addons/graphics_editor/Navbar.gd" type="Script" id=6]
[ext_resource path="res://addons/graphics_editor/MenuButtonExtended.gd" type="Script" id=7]
[ext_resource path="res://addons/graphics_editor/Colors.gd" type="Script" id=8]
[ext_resource path="res://addons/graphics_editor/SaveFileDialog.gd" type="Script" id=9]
[ext_resource path="res://addons/graphics_editor/Settings.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/graphics_editor/DebugTextDisplay.gd" type="Script" id=11]
[ext_resource path="res://addons/graphics_editor/LayerButton.tscn" type="PackedScene" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.75, 0.75, 0.75, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.211765, 0.2, 0.2, 0.133333 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.452144, 0.397716, 0.0538159, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.114134, 0.989919, 0.990908, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.315986, 0.563746, 0.536825, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.218219, 0.336323, 0.0659741, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.163289, 0.240192, 0.37346, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.330661, 0.369256, 0.97379, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.216537, 0.755049, 0.491349, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.826652, 0.848742, 0.0115273, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.122094, 0.920589, 0.44931, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.150271, 0.325517, 0.694568, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.703849, 0.926427, 0.334865, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.471709, 0.00867083, 0.188914, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.300704, 0.501144, 0.687167, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.52919, 0.953225, 0.374313, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.443307, 0.0121565, 0.599621, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.868357, 0.245633, 0.583044, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.20955, 0.510868, 0.721501, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.544154, 0.786819, 0.162435, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.309762, 0.772837, 0.467272, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.0682784, 0.753402, 0.362869, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.343818, 0.0699588, 0.589297, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.290648, 0.443224, 0.249702, 1 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.838284, 0.660357, 0.11075, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.876227, 0.296861, 0.400053, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.156863, 0.156863, 0.156863, 1 )
border_width_top = 2
border_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[node name="Editor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Navbar" type="Control" parent="Panel/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Navbar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer/Navbar"]
anchor_left = 0.0078125
anchor_top = 0.12
anchor_right = 0.628906
anchor_bottom = 0.62
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="File" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_right = 73.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "File"
flat = false
items = [ "Save", null, 0, false, false, 0, 0, null, "", false, "Load", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Edit" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 93.0
margin_right = 166.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Edit"
flat = false
items = [ "Undo", null, 0, false, false, 0, 0, null, "", false, "Redo", null, 0, false, false, 1, 0, null, "", false, "Cut", null, 0, false, false, 2, 0, null, "", false, "Copy", null, 0, false, false, 3, 0, null, "", false, "Paste", null, 0, false, false, 4, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Canvas" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 186.0
margin_right = 259.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Canvas"
flat = false
items = [ "Clear Canvas", null, 0, false, false, 0, 0, null, "", false, "Change Size", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Layer" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 279.0
margin_right = 352.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Layer"
flat = false
items = [ "Add Layer", null, 0, false, false, 0, 0, null, "", false, "Delete Layer", null, 0, false, false, 1, 0, null, "", false, "Duplicate Layer", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Grid" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 372.0
margin_right = 445.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Grid"
flat = false
items = [ "Toggle Grid", null, 0, false, false, 0, 0, null, "", false, "Change Grid Size", null, 0, false, false, 1, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Magic" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 465.0
margin_right = 538.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Magic"
flat = false
items = [ "ChangeSingleColor", null, 0, false, false, 0, 0, null, "", false, "ChangeColorRange", null, 0, false, false, 1, 0, null, "", false, "HSV Noise", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )

[node name="Editor" type="MenuButton" parent="Panel/VBoxContainer/Navbar/Buttons"]
margin_left = 558.0
margin_right = 635.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Editor"
flat = false
items = [ "Settings", null, 0, false, false, 0, 0, null, "", false ]
switch_on_hover = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 555.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="PaintCanvasContainer" type="Control" parent="Panel/VBoxContainer/HBoxContainer"]
show_behind_parent = true
margin_right = 906.0
margin_bottom = 501.0
focus_mode = 1
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaintCanvas" parent="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -240.0
margin_right = 384.0
margin_bottom = 208.0
mouse_filter = 1
canvas_size = Vector2( 48, 28 )

[node name="Grids" type="Control" parent="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualGrid" parent="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas/Grids" instance=ExtResource( 4 )]
mouse_filter = 2
color = Color( 1, 1, 1, 0.121569 )

[node name="VisualGrid2" parent="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas/Grids" instance=ExtResource( 4 )]
mouse_filter = 2
color = Color( 1, 1, 1, 1 )
size = 160

[node name="CanvasOutline" type="Control" parent="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
color = Color( 0, 1, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 910.0
margin_right = 1024.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolMenu" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer"]
margin_right = 114.0
margin_bottom = 501.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tools" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu"]
margin_right = 114.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PaintTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_right = 114.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Paint"

[node name="BrushTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 24.0
margin_right = 114.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Brush"

[node name="BucketTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 44.0
margin_right = 114.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Bucket Fill"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RainbowTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 68.0
margin_right = 114.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rainbow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 92.0
margin_right = 114.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Line"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RectTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 116.0
margin_right = 114.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rectangle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DarkenTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 140.0
margin_right = 114.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Darken"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrightenTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 164.0
margin_right = 114.0
margin_bottom = 184.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Brighten"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 188.0
margin_right = 114.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Color Picker"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CutTool" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 212.0
margin_right = 114.0
margin_bottom = 232.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cut Section"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPickerButton" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools"]
margin_top = 236.0
margin_right = 114.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Colors" type="GridContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu"]
margin_top = 260.0
margin_right = 114.0
margin_bottom = 430.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
script = ExtResource( 8 )

[node name="Button1" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 2 )

[node name="Button2" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 3 )

[node name="Button3" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 4 )

[node name="Button4" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_right = 112.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 5 )

[node name="Button5" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_top = 29.0
margin_right = 25.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 6 )

[node name="Button6" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_top = 29.0
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )

[node name="Button7" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 8 )

[node name="Button8" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_top = 29.0
margin_right = 112.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 9 )

[node name="Button9" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_top = 58.0
margin_right = 25.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 10 )

[node name="Button10" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_top = 58.0
margin_right = 54.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 11 )

[node name="Button11" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_top = 58.0
margin_right = 83.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 12 )

[node name="Button12" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_top = 58.0
margin_right = 112.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 13 )

[node name="Button13" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_top = 87.0
margin_right = 25.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 14 )

[node name="Button14" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_top = 87.0
margin_right = 54.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 15 )

[node name="Button15" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_top = 87.0
margin_right = 83.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 16 )

[node name="Button16" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_top = 87.0
margin_right = 112.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 17 )

[node name="Button17" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_top = 116.0
margin_right = 25.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 18 )

[node name="Button18" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_top = 116.0
margin_right = 54.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 19 )

[node name="Button19" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_top = 116.0
margin_right = 83.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 20 )

[node name="Button20" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_top = 116.0
margin_right = 112.0
margin_bottom = 141.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 21 )

[node name="Button21" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_top = 145.0
margin_right = 25.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 22 )

[node name="Button22" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 29.0
margin_top = 145.0
margin_right = 54.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 23 )

[node name="Button23" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 58.0
margin_top = 145.0
margin_right = 83.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 24 )

[node name="Button24" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Colors"]
margin_left = 87.0
margin_top = 145.0
margin_right = 112.0
margin_bottom = 170.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 25 )

[node name="Control" type="ScrollContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu"]
margin_top = 434.0
margin_right = 114.0
margin_bottom = 501.0
size_flags_vertical = 3

[node name="Layers" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Control"]
margin_right = 114.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer1" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Control/Layers" instance=ExtResource( 12 )]
margin_bottom = 32.0

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Control/Layers"]
margin_top = 36.0
margin_right = 114.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 25 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="Panel/VBoxContainer"]
margin_top = 559.0
margin_right = 1024.0
margin_bottom = 599.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 26 )

[node name="DebugTextDisplay" type="RichTextLabel" parent="Panel/VBoxContainer/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "FPS 145	Mouse Position (0, 0)	Canvas Mouse Position (0, 0) 	Canvas Position (0, 0)	
Cell Position (0, 0) 	Cell Color 0,0,0,0	Cell Region (0, 0) 	Cell Position (0, 0)	"
scroll_active = false
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -165.0
margin_right = 340.0
margin_bottom = 165.0
filters = PoolStringArray( "*.png ; PNG Images" )
script = ExtResource( 9 )

[node name="Settings" parent="." instance=ExtResource( 10 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 50.0
[connection signal="mouse_entered" from="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas" to="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas" to="Panel/VBoxContainer/HBoxContainer/PaintCanvasContainer/PaintCanvas" method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/PaintTool" to="." method="_on_PaintTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/BrushTool" to="." method="_on_BrushTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/BucketTool" to="." method="_on_BucketTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/RainbowTool" to="." method="_on_RainbowTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/LineTool" to="." method="_on_LineTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/RectTool" to="." method="_on_RectTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/DarkenTool" to="." method="_on_DarkenTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/BrightenTool" to="." method="_on_BrightenTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/ColorPickerTool" to="." method="_on_ColorPickerTool_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/CutTool" to="." method="_on_CutTool_pressed"]
[connection signal="color_changed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Tools/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ScrollContainer/ToolMenu/Control/Layers/Button" to="." method="_on_Button_pressed"]
[connection signal="about_to_show" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_about_to_show"]
[connection signal="confirmed" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_confirmed"]
[connection signal="file_selected" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_file_selected"]
[connection signal="visibility_changed" from="SaveFileDialog" to="SaveFileDialog" method="_on_SaveFileDialog_visibility_changed"]
